--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -22,7 +22,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
   	  </button>
-      <a class="navbar-brand" href="{{url_form('main.index')}}">Flasky</a>
+      <a class="navbar-brand" href="{{url_for('main.index')}}">Flasky</a>
   	</div>
   	<div class="navbar-collapse collapse">
 	  <ul class="nav navbar-nav">
