--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -24,6 +24,13 @@
   	  </button>
       <a class="navbar-brand" href="{{url_for('main.index')}}">Flasky</a>
   	</div>
+    <ul class= "nav navbar-nav navbar-right">
+      {% if current_user.is_authenticated %}
+        <li><a href="{{ url_for('auth.logout') }}">Log out</a></li>
+      {% else %}
+        <li><a href="{{ url_for('auth.login') }}">Log in</a></li>
+      {% endif %}
+    </ul>
   	<div class="navbar-collapse collapse">
 	  <ul class="nav navbar-nav">
 		<li><a href="{{url_for('main.index')}}">Home</a></li>
